--- a/oe2020/project1/_layouts/default.html
+++ b/oe2020/project1/_layouts/default.html
@@ -63,9 +63,8 @@
     </button>
 </nav>
 
-      <section>
-        {{ content }}
-      </section>
+      {% block content %}
+     {% endblock %}
 
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
