--- a/oe2020/project1/_layouts/default.html
+++ b/oe2020/project1/_layouts/default.html
@@ -63,8 +63,9 @@
     </button>
 </nav>
 
-      {% block content %}
-     {% endblock %}
+      <section>
+	      {{ content }}
+	  </section>
 
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
