--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="{{ 'assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 	  <link rel="stylesheet" type="text/css" 
-    href="{{ 'study-cohort-ontology/bootstrap/css/bootstrap.min.css?v=' | append: site.github.build_revision | relative_url }}"/>
+    href="{{ 'bootstrap/css/bootstrap.min.css?v=' | append: site.github.build_revision | relative_url }}"/>
 
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	  <title>Making Study Populations Visible through Knowledge Graphs</title>
 	  <div class="w3-container top" style="background:url({{'images/medical-banner-4.jpg' | relative_url}});background-size:cover;
   box-shadow:inset 0 0 0 2000px rgba(200, 247, 197, 0.3);">
   <br>
