--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,17 +20,14 @@
 
         <ul>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/index"><strong>Home</strong></a>
+                <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/index"><strong>Research</strong></a>
 	    </li>
 	    <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/papers-used"><strong>Evaluation Dataset</strong></a>
+                <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/papers-used"><strong>Resources</strong></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/ontology-resource"><strong>Ontologies</strong></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/knowledge-graph"><strong>Knowledge Graph</strong></a>
-            </li>
+                <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/ontology-resource"><strong>Design</strong></a>
+	     </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/application"><strong>Application</strong></a>
             </li>
