--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,19 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+	  
+	  <title>Making Study Populations Visible through Knowledge Graphs</title>
+	  <div class="w3-container top" style="background:url({{'images/medical-banner-4.jpg' | relative_url}});background-size:cover;
+  box-shadow:inset 0 0 0 2000px rgba(200, 247, 197, 0.3);">
+  <br>
+  <br>
+  <br>
+  <h1 class="header" style="text-align:center;box-shadow:inset 0 0 0 2000px rgba(200, 247, 197, 0.8);">{{ site.title | default: site.github.repository_name }}</h1>
+  <p class="header" style="text-align:center;box-shadow:inset 0 0 0 2000px rgba(200, 247, 197, 0.8);">{{ site.description | default: site.github.project_tagline }}</p>
+  <br>
+  <br>
+		  <p style="text-align:right"><sup>*</sup>This image was taken from: https://www.policyschool.ca/background-banner/health-policy/health-banner/</p>
+</div>
   </head>
   <body>
     <div class="wrapper">
