--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,7 @@
     <![endif]-->
 	  
 	  <title>Making Study Populations Visible through Knowledge Graphs</title>
-	  <div class="w3-container top" style="background:url({{'images/medical-banner-4.jpg' | relative_url}});background-size:cover;
-  box-shadow:inset 0 0 0 2000px rgba(200, 247, 197, 0.3);">
+	  <div class="w3-container top" style="background-image: linear-gradient(180deg, green, #03bafc);">
   <br>
   <br>
   <br>
@@ -22,8 +21,7 @@
   <p class="header" style="text-align:center;box-shadow:inset 0 0 0 2000px rgba(200, 247, 197, 0.8);">{{ site.description | default: site.github.project_tagline }}</p>
   <br>
   <br>
-		  <p style="text-align:right"><sup>*</sup>This image was taken from: https://www.policyschool.ca/background-banner/health-policy/health-banner/</p>
-</div>
+	  </div>
   </head>
   <body>
     <div class="wrapper">
