--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,15 @@
   <br>
   <br>
   <br>
+		  
+		  <header class="solid">
+  <img src="images/tw-logo_v2.png" alt="star" />
   <h1 class="header" style="text-align:center;box-shadow:inset 0 0 0 2000px rgba(200, 247, 197, 0.8);">{{ site.title | default: site.github.repository_name }}</h1>
   <p class="header" style="text-align:center;box-shadow:inset 0 0 0 2000px rgba(200, 247, 197, 0.8);">{{ site.description | default: site.github.project_tagline }}</p>
+  <img src="images/rpi_logo.png" alt="star" />
+</header>
+		  
+  
   <br>
   <br>
 	  </div>
