--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,16 +20,16 @@
 	
 		  <span style="display: contents;">
     <h1 class="header" style="text-align:center;box-shadow:inset 0 0 0 2000px rgba(200, 247, 197, 0.8);">
-       <img src="{{site.baseurl}}/ontology-engineering/images/tw-logo-v2.png" style="float: left; clear: left; display:inline-block;" alt="star">
-	    <img src="{{site.baseurl}}/ontology-engineering/images/rpi_logo.png" alt="star" style="float: right; clear: right; display:inline-block;">
+       <img src="{{site.baseurl}}/images/tw-logo-v2.png" style="float: left; clear: left; display:inline-block;" alt="star">
+	    <img src="{{site.baseurl}}/images/rpi_logo.png" alt="star" style="float: right; clear: right; display:inline-block;">
     </h1>
 </span>
-		  <header>
+		
 <!--   <img src="{{site.baseurl}}/images/tw-logo-v2.png" alt="star" /> -->
   <h1 class="header" style="text-align:center;box-shadow:inset 0 0 0 2000px rgba(200, 247, 197, 0.8);">{{ site.title | default: site.github.repository_name }}</h1>
   <p class="header" style="text-align:center;box-shadow:inset 0 0 0 2000px rgba(200, 247, 197, 0.8);">{{ site.description | default: site.github.project_tagline }}</p>
 <!--   <img src="{{site.baseurl}}/images/rpi_logo.png" alt="star" /> -->
-</header>
+
 		  
   
   <br>
