--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,9 @@
   <br>
 	
 		  <span style="display: contents;">
-    <h1 class="header" style="text-align:center;box-shadow:inset 0 0 0 2000px rgba(200, 247, 197, 0.8);">
-       <img src="{{site.baseurl}}/images/tw-logo-v2.png" style="float: left; clear: left; display:inline-block;" alt="star">
-	    <img src="{{site.baseurl}}/images/rpi_logo.png" alt="star" style="float: right; clear: right; display:inline-block;">
+    <h1 class="header" style="text-align:center;">
+       <img src="{{site.baseurl}}/images/tw-logo-v2.png" style="float: left; clear: left; display:inline-block; background: white;" alt="star">
+	    <img src="{{site.baseurl}}/images/rpi_logo.png" alt="star" style="float: right; clear: right; display:inline-block; background: white;" alt="star">
     </h1>
 </span>
 		
