--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,10 +38,13 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
-        <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
+        <h1 class="header">Navigation</h1>
+        <p class="header">Class and class project details</p>
 
         <ul>
+	     <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/index"><strong>About Class</strong></a>
+	    </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/index"><strong>Research</strong></a>
 	    </li>
