--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,8 @@
 ---
 
 @import "{{ site.theme }}";
+
+.green-gradient{
+  background: linear-gradient(to top, #117848 0%, #097d5a 100%);
+  box-shadow: inset 0px 1px 1px 0 #117848;
+}
