--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,19 +42,19 @@
         <p class="header">Class and class project details</p>
 
         <ul>
-	     <li class="nav-item">
+	     <li class="nav-item green-gradient">
                 <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/index"><strong>About Class</strong></a>
 	    </li>
-            <li class="nav-item">
+            <li class="nav-item green-gradient">
                 <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/index"><strong>Research</strong></a>
 	    </li>
-	    <li class="nav-item">
+	    <li class="nav-item green-gradient">
                 <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/papers-used"><strong>Resources</strong></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item green-gradient">
                 <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/ontology-resource"><strong>Design</strong></a>
 	     </li>
-            <li class="nav-item">
+            <li class="nav-item green-gradient">
                 <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/application"><strong>Application</strong></a>
             </li>
 <!--             <li class="nav-item">
