--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,9 @@
 	     <li class="nav-item green-gradient">
                 <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/index"><strong>About Class</strong></a>
 	    </li>
+		 <li class="nav-item green-gradient">
+                <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/oe2020/project1"><strong>Project 1</strong></a>
+	    </li>
             <li class="nav-item green-gradient">
                 <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/index"><strong>Research</strong></a>
 	    </li>
