--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,3 +7,7 @@
   background: linear-gradient(to top, #117848 0%, #097d5a 100%);
   box-shadow: inset 0px 1px 1px 0 #117848;
 }
+
+.steelblue{
+ background-color: #4682B4; 
+}
