--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <header style="bacground-color: steelblue;">
+      <header class="steelblue">
         <h1 class="header">Navigation</h1>
         <p class="header">Class and class project details</p>
 
