--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="steelblue">
+<!--       <header class="steelblue">
         <h1 class="header">Navigation</h1>
         <p class="header">Class and class project details</p>
 
@@ -70,7 +70,7 @@
             <li><a class="buttons github" href="{{ site.github.owner_url }}">GitHub Profile</a></li>
           </ul>
         {% endif %}
-      </header>
+      </header> -->
 
       <section>
         {{ content }}
