--- a/_layouts/navbar.html
+++ b/_layouts/navbar.html
@@ -14,21 +14,27 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
-        <h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
-        <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
+     <header class="steelblue">
+        <h1 class="header">Navigation</h1>
+        <p class="header">Class and class project details</p>
 
         <ul>
-            <li class="nav-item">
+	     <li class="nav-item green-gradient">
+                <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/index"><strong>About Class</strong></a>
+	    </li>
+		 <li class="nav-item green-gradient">
+                <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/oe2020/project1"><strong>Project 1</strong></a>
+	    </li>
+            <li class="nav-item green-gradient">
                 <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/index"><strong>Research</strong></a>
 	    </li>
-	    <li class="nav-item">
+	    <li class="nav-item green-gradient">
                 <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/papers-used"><strong>Resources</strong></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item green-gradient">
                 <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/ontology-resource"><strong>Design</strong></a>
 	     </li>
-            <li class="nav-item">
+            <li class="nav-item green-gradient">
                 <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/application"><strong>Application</strong></a>
             </li>
 <!--             <li class="nav-item">
