beautify layout file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,95 +1,102 @@
 <!doctype html>
 <html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-{% seo %}
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  {% seo %}
+  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+  <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-	  
-	  <title>Making Study Populations Visible through Knowledge Graphs</title>
-	  <div class="w3-container top" style="background-image: linear-gradient(180deg, green, #03bafc);">
-  <br>
-  <br>
-	
-		  <span style="display: contents;">
-    <h1 class="header" style="text-align:center;">
-       <img src="{{site.baseurl}}/images/tw-logo-v2.png" style="float: left; clear: left; display:inline-block; background: white;" alt="star">
-	    <img src="{{site.baseurl}}/images/rpi_logo.png" alt="star" style="float: right; clear: right; display:inline-block; background: white;" alt="star">
-    </h1>
-</span>
-		
-<!--   <img src="{{site.baseurl}}/images/tw-logo-v2.png" alt="star" /> -->
-  <h1 class="header" style="text-align:center;box-shadow:inset 0 0 0 2000px rgba(200, 247, 197, 0.8);">{{ site.title | default: site.github.repository_name }}</h1>
-  <p class="header" style="text-align:center;box-shadow:inset 0 0 0 2000px rgba(200, 247, 197, 0.8);">{{ site.description | default: site.github.project_tagline }}</p>
-<!--   <img src="{{site.baseurl}}/images/rpi_logo.png" alt="star" /> -->
+  <![endif]-->
+  <title>Making Study Populations Visible through Knowledge Graphs</title>
+  <div class="w3-container top" style="background-image: linear-gradient(180deg, green, #03bafc);">
+    <br>
+    <br>
+    <span style="display: contents;">
+      <h1 class="header" style="text-align:center;">
+        <img src="{{site.baseurl}}/images/tw-logo-v2.png"
+          style="float: left; clear: left; display:inline-block; background: white;" alt="star">
+        <img src="{{site.baseurl}}/images/rpi_logo.png" alt="star"
+          style="float: right; clear: right; display:inline-block; background: white;" alt="star">
+      </h1>
+    </span>
+    <!--   <img src="{{site.baseurl}}/images/tw-logo-v2.png" alt="star" /> -->
+    <h1 class="header" style="text-align:center;box-shadow:inset 0 0 0 2000px rgba(200, 247, 197, 0.8);">
+      {{ site.title | default: site.github.repository_name }}</h1>
+    <p class="header" style="text-align:center;box-shadow:inset 0 0 0 2000px rgba(200, 247, 197, 0.8);">
+      {{ site.description | default: site.github.project_tagline }}</p>
+    <!--   <img src="{{site.baseurl}}/images/rpi_logo.png" alt="star" /> -->
+    <br>
+    <br>
+  </div>
+</head>
 
-		  
-  
-  <br>
-  <br>
-	  </div>
-  </head>
-  <body>
-    <div class="wrapper">
-  <header class="steelblue">
-        <h1 class="header">Navigation</h1>
-        <p class="header">Class and class project details</p>
-
-        <ul>
-	     <li class="nav-item green-gradient">
-                <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/index"><strong>About Class</strong></a>
-	    </li>
-		 <li class="nav-item green-gradient">
-                <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/oe2020/project1"><strong>Project 1</strong></a>
-	    </li>
-            <li class="nav-item green-gradient">
-                <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/index"><strong>Research</strong></a>
-	    </li>
-	    <li class="nav-item green-gradient">
-                <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/papers-used"><strong>Resources</strong></a>
-            </li>
-            <li class="nav-item green-gradient">
-                <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/ontology-resource"><strong>Design</strong></a>
-	     </li>
-            <li class="nav-item green-gradient">
-                <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/application"><strong>Application</strong></a>
-            </li>
-<!--             <li class="nav-item">
+<body>
+  <div class="wrapper">
+    <header class="steelblue">
+      <h1 class="header">Navigation</h1>
+      <p class="header">Class and class project details</p>
+      <ul>
+        <li class="nav-item green-gradient">
+          <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/index"><strong>About Class</strong></a>
+        </li>
+        <li class="nav-item green-gradient">
+          <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/oe2020/project1"><strong>Project 1</strong></a>
+        </li>
+        <li class="nav-item green-gradient">
+          <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/index"><strong>Research</strong></a>
+        </li>
+        <li class="nav-item green-gradient">
+          <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/papers-used"><strong>Resources</strong></a>
+        </li>
+        <li class="nav-item green-gradient">
+          <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/ontology-resource"><strong>Design</strong></a>
+        </li>
+        <li class="nav-item green-gradient">
+          <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/application"><strong>Application</strong></a>
+        </li>
+        <!--             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/contact"><strong>Contact</strong></a>
             </li> -->
-        </ul>
+      </ul>
 
-        {% if site.github.is_user_page %}
-          <ul>
-            <li><a class="buttons github" href="{{ site.github.owner_url }}">GitHub Profile</a></li>
-          </ul>
-        {% endif %}
-      </header>
+      {% if site.github.is_user_page %}
+      <ul>
+        <li><a class="buttons github" href="{{ site.github.owner_url }}">GitHub Profile</a></li>
+      </ul>
+      {% endif %}
+    </header>
 
-      <section>
-        {{ content }}
-      </section>
+    <section>
+      {{ content }}
+    </section>
 
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    {% if site.google_analytics %}
-      <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', '{{ site.google_analytics }}', 'auto');
-        ga('send', 'pageview');
-      </script>
-    {% endif %}
-  </body>
+    <footer>
+      <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+    </footer>
+  </div>
+  <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+  {% if site.google_analytics %}
+  <script>
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    ga('create', '{{ site.google_analytics }}', 'auto');
+    ga('send', 'pageview');
+  </script>
+  {% endif %}
+</body>
+
 </html>
