--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
         <!-- <li class="nav-item green-gradient">
           <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/oe2020/project1"><strong>Project 1</strong></a>
         </li> -->
-        <li class="nav-item green-gradient">
+<!--         <li class="nav-item green-gradient">
           <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/index"><strong>Research</strong></a>
         </li>
         <li class="nav-item green-gradient">
@@ -89,7 +89,7 @@
         </li>
         <li class="nav-item green-gradient">
           <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/application"><strong>Application</strong></a>
-        </li>
+        </li> -->
         <!--             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="{{site.baseurl}}/contact"><strong>Contact</strong></a>
             </li> -->
