--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,15 +3,25 @@
 
 @import "{{ site.theme }}";
 
-.green-gradient{
+ul.nav-menu li {
   background: linear-gradient(to top, #117848 0%, #097d5a 100%);
   box-shadow: inset 0px 1px 1px 0 #117848;
+  a {
+    font-weight: bold;
+  }
 }
 
-.steelblue{
- background-color: #4682B4;
+.steelblue {
+  background-color: #4682B4;
 }
 
 .sub-menu {
   padding-left: 10px;
+}
+
+.header {
+  &.title {
+    text-align: center;
+    box-shadow: inset 0 0 0 2000px rgba(200, 247, 197, 0.8);
+  }
 }
