Turn off debug mode

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,11 @@
 <!doctype html>
 <html lang="{{ site.lang | default: "en-US" }}">
 
-{%- comment -%} Debug messages will be renedered if this is true {%- endcomment -%}
-{% assign debug_mode = true %}
+{%- comment -%}
+  Debug messages will be renedered if this is true
+  Use this to debug issues on the GitHub Pages site.
+{%- endcomment -%}
+{% assign debug_mode = false %}
 
 {%comment%} Determine if the current page is for a particular year or project {%endcomment%}
 
