add guidelines menu item

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -110,7 +110,7 @@
         <p class="header">Class and class project details</p>
         <ul class="nav-menu">
           <li>
-            <a href="{{site.baseurl}}">About Class</a>
+            <a href="{{'/' | relative_url}}">About Class</a>
           </li>
           {% assign years = site.data.years | sort %}
           {% for year_hash in years %}
@@ -131,6 +131,9 @@
               </div>
             {% endif %}
           {% endfor %}
+          <li>
+            <a href="{{'/docs/site_development' | relative_url}}">Guidelines</a>
+          </li>
         </ul>
       {% endif %}
 
