--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,15 @@ ul.nav-menu li {
   }
 }
 
+li.no-highlight{
+  list-style-type: none;
+    width: 132px;
+    height: 15px;
+    margin-bottom: 12px;
+    line-height: 1em;
+    padding: 6px 6px 6px 7px;
+}
+
 .steelblue {
   background-color: #4682B4;
 }
