Refactor nav menu data

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,11 +3,21 @@
 
 @import "{{ site.theme }}";
 
-ul.nav-menu li {
-  background: linear-gradient(to top, #117848 0%, #097d5a 100%);
-  box-shadow: inset 0px 1px 1px 0 #117848;
-  a {
-    font-weight: bold;
+ul.nav-menu {
+  li.nav-link {
+    background: linear-gradient(to top, #117848 0%, #097d5a 100%);
+    box-shadow: inset 0px 1px 1px 0 #117848;
+    a {
+      font-weight: bold;
+    }
+  }
+  .section {
+    font-family: Arvo, sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 1.3em;
+    border-bottom: none;
+    margin-top: 0;
   }
 }
 
