--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 
 {% for year_hash in years %}
   {% assign year = year_hash[1] %}
-  {% assign year_path = year.year.path | relative_url %}
+  {% assign year_path = year.path | relative_url %}
   {% if debug_mode %}
     <p>year_path: {{year_path | inspect }}</p>
   {% endif %}
@@ -29,8 +29,7 @@
   {%- endcomment -%}
   {% assign active_year = year%}
   {% if url contains year_path %}
-    {% for project_hash in year.projects %}
-      {% assign project = project_hash[1] %}
+    {% for project in year.projects %}
       {% assign project_path = year_path | append: '/' | append: project.path %}
       {% if debug_mode %}
         <p>project_path: {{project_path | inspect }}</p>
@@ -97,14 +96,18 @@
 
       {%- comment -%} Project Page Menu {%- endcomment -%}
       {% if active_project %}
-        <a href="{{active_year.year.path | relative_url}}">&lt; Back to course page</a>
+        <a href="{{active_year.path | relative_url}}">&lt; Back to course page</a>
         <h1 class="header">{{active_project.name}}</h1>
         <ul class="nav-menu">
-          {% for page in active_project.pages %}
-            {% assign page_path = active_project_path | append: '/' | append: page.path %}
-            <li>
-              <a href="{{page_path}}">{{page.name}}</a>
-            </li>
+          {% for item in active_year.project_nav %}
+            {% if item.section %}
+              <p class="section">{{ item.section }}</p>
+            {% else %}
+              {% assign page_path = active_project_path | append: '/' | append: item.path %}
+              <li class="nav-link">
+                <a href="{{page_path}}">{{item.name}}</a>
+              </li>
+            {% endif %}
           {% endfor %}
         </ul>
       {%- comment -%} Course Page Menu {%- endcomment -%}
@@ -112,29 +115,28 @@
         <h1 class="header">Navigation</h1>
         <p class="header">Class and class project details</p>
         <ul class="nav-menu">
-          <li>
+          <li class="nav-link">
             <a href="{{'/' | relative_url}}">About Class</a>
           </li>
           {% assign years = site.data.years | sort %}
           {% for year_hash in years %}
             {% assign year = year_hash[1] %}
-            {% assign year_path = year.year.path | relative_url %}
-            <li>
-              <a href="{{year_path}}">{{year.year.name}}</a>
+            {% assign year_path = year.path | relative_url %}
+            <li class="nav-link">
+              <a href="{{year_path}}">{{year.name}}</a>
             </li>
-            {% if active_year.year.path == year.year.path %}
+            {% if active_year.path == year.path %}
               <div class="sub-menu">
-              {% for project_hash in year.projects %}
-                {% assign project = project_hash[1] %}
+              {% for project in year.projects %}
                 {% assign project_path = year_path | append: '/' | append: project.path %}
-                <li>
+                <li class="nav-link">
                   <a href="{{project_path}}">{{project.name}}</a>
                 </li>
               {% endfor %}
               </div>
             {% endif %}
           {% endfor %}
-          <li>
+          <li class="nav-link">
             <a href="{{'/docs/site_development' | relative_url}}">Guidelines</a>
           </li>
         </ul>
