--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,8 +43,17 @@ li.no-highlight{
     text-align: center;
     box-shadow: inset 0 0 0 2000px rgba(200, 247, 197, 0.8);
   }
+  margin: 15px 25px 0 0;
 }
 
 .message-highlight{
   background-color:#e1c699;
 }
+
+header.li {
+  height: 20px;
+  width: 180px;
+}
+
+
+
