--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,8 +30,10 @@ li.no-highlight{
     padding: 6px 6px 6px 7px;
 }
 
-.steelblue {
+header.steelblue {
   background-color: #4682B4;
+   margin: 15px 25px 0 0;
+  width: 200px;
 }
 
 .sub-menu {
@@ -43,14 +45,14 @@ li.no-highlight{
     text-align: center;
     box-shadow: inset 0 0 0 2000px rgba(200, 247, 197, 0.8);
   }
-  margin: 15px 25px 0 0;
 }
+
 
 .message-highlight{
   background-color:#e1c699;
 }
 
-header.li {
+header.ul.li {
   height: 20px;
   width: 180px;
 }
