--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,23 +3,72 @@
 
 @import "{{ site.theme }}";
 
-ul.nav-menu {
-  li.nav-link {
-    background: linear-gradient(to top, #117848 0%, #097d5a 100%);
-    box-shadow: inset 0px 1px 1px 0 #117848;
-    height: 20px;
-    width: 180px;
-    a {
-      font-weight: bold;
+$header-width: 230px;
+$header-left-pad: 50px;
+$header-right-pad: 25px;
+$header-total-width: $header-width + $header-left-pad + $header-right-pad;
+
+@media print, screen and (max-width: 960px) {
+  header ul.nav-menu {
+    position: static;
+  }
+}
+
+@media print, screen and (min-width: 960px) {
+  header {
+    max-height: calc(100vh - 365px);
+    overflow-y: auto;
+  }
+}
+
+div.wrapper {
+  width: 715px + $header-total-width
+}
+
+header {
+  width: $header-width;
+  padding-left: $header-left-pad;
+  padding-right: $header-right-pad;
+
+  h1.header {
+    font-size: 25px;
+  }
+
+  ul.nav-menu {
+    margin-right: 0;
+    padding-right: 22px;
+    margin-bottom: 10px;
+    li {
+      background: none;
+      box-shadow: none;
+      border: none;
+      width: 100%;
+      height: 10px;
+      padding-left: 0;
+      margin-bottom: 5px;
+      a {
+        font-weight: bold;
+      }
     }
   }
-  .section {
+
+  p.section, h1.header {
+    position: relative;
+    left: -$header-left-pad;
+    width: $header-width;
+    background: #2c699f;
+    padding-left: $header-left-pad;
+    padding-right: $header-right-pad;
+  }
+
+  p.section {
     font-family: Arvo, sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 300;
-    line-height: 1.3em;
+    line-height: 1.8em;
     border-bottom: none;
     margin-top: 0;
+    margin-bottom: 12px;
   }
 }
 
@@ -32,10 +81,8 @@ li.no-highlight{
     padding: 6px 6px 6px 7px;
 }
 
-header.steelblue {
+.steelblue {
   background-color: #4682B4;
-   margin: 15px 25px 0 0;
-  width: 200px;
 }
 
 .sub-menu {
@@ -53,5 +100,3 @@ header.steelblue {
 .message-highlight{
   background-color:#e1c699;
 }
-
-
