add table of contents for docs pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -159,6 +159,12 @@
     </header>
 
     <section>
+      {% if page.toc %}
+        <div class="toc">
+          <strong>Contents</strong>
+          {% include toc.html html=content %}
+        </div>
+      {% endif %}
       {{ content }}
     </section>
 
