--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -100,3 +100,11 @@ li.no-highlight{
 .message-highlight{
   background-color:#e1c699;
 }
+
+.toc {
+  background-color: #fff;
+  margin: 5px 0;
+  padding: 10px 30px;
+  border: 1px solid #e8e8e8;
+  border-radius: 3px;
+}
